# hianime-data-fetcher

./: .env_example  Cargo.toml  diesel.toml  down.sql
api/: bun.lockb  package.json  tsconfig.json
api/src/: server.ts
migrations/2024-07-17-114351_create_animes/: down.sql  up.sql
migrations/2024-07-19-110339_anime_table/: down.sql  up.sql
migrations/2024-07-20-100816_anime_table/: down.sql  up.sql
migrations/2024-07-22-043906_anime_id/: down.sql  up.sql
migrations/2024-07-23-060433_anime_details/: up.sql
migrations/2024-07-29-092931_anime/: down.sql  up.sql
src/: db.rs  main.rs  model.rs  schema.rs
src/operations/: anime_ops.rs  atoz_ops.rs  episode_ops.rs  staff_ops.rs
